Galapix 0.0.4 (??. Sep 2008)
============================

* support for PNG images
* support for RGBA tiles
* support for ImageMagick
* database format changed, for conversion do a:

  ALTER TABLE tiles add format INTEGER DEFAULT 0;

Galapix 0.0.3 (12. Sep 2008)
============================

* fixes for gcc 4.3
* added random layout function
* added random shuffle
* added function to create non-overlapping layouts  
* scale is smoothly handled on relayout
* added MoveTool to move and scale images
* fixed random halting of the application


Galapix 0.0.2 (4. Sep 2008)
===========================

* initial release


# EOF #