@@ -40,7 +40,7 @@ public:
     : r(0), g(0), b(0), a(0)
   {}
 
-  RGBA(uint8_t r, uint8_t g, uint8_t b, uint8_t a)
+  RGBA(uint8_t r, uint8_t g, uint8_t b, uint8_t a = 255)
     : r(r), g(g), b(b), a(a)
   {}
 
